# GDCM

./: .cvsignore  AUTHORS  CMakeLists.txt  ChangeLog  DEVELOPPER  DartConfig.cmake  GDCMConfig.cmake.in  GDCMUse.cmake  INSTALL  MANIFEST.in  Makefile  Makefile.am  NEWS  PACKAGER  README  TODO  WrapSwig.py  WrapVTK.py  acinclude.m4  autogen.sh  configure.in  dcmlib.h  distutilsSwigCPlusPlus.py  distutilsWrapping.py  gdcm.dsw  gdcm.spec.in  gdcmConfig.cmake.in  gdcmConfigure.h.in  gdcmTestFUNCTION.cxx  gdcmUse.cmake  gdcmVersion.py  hashtest.cxx  python.m4  setup.py  uml.xmi
Doc/: .cvsignore  CMakeLists.txt  DoxyDevelInstal.txt  DoxyInstallation.txt  DoxyIntroduction.txt  DoxyMainPage.txt  DoxyMainPageUser.txt  DoxyPython.txt  Doxyfile  DoxyfileDeveloppers  DoxyfileUsers  GE_ImageThumbnails  HowToCorrelatePETCT.txt  License.txt  Makefile.am  README  doxygen.config.in  gdcmUML.xmi  requirement.txt
Doc/Website/: CodingStyle.html  CommandLine.html  ConformanceSummary.html  Credits.html  Cvs.html  Developpers.html  Download.html  HowToUseGdcm.html  ImageParticularities.html  Installation.html  License.html  MailingList.html  Main.html  News.html  Sidebar.html  Support.html  VtkGdcm.html
Example/: Anonymize.cxx  AnonymizeDicomDir.cxx  AnonymizeMultiPatient.cxx  AnonymizeNoLoad.cxx  AnonymizeReWriteMultiPatient.cxx  BatchUncompress.cxx  BrukerToMhd.cxx  BuildUpDicomDir.cxx  CMakeLists.txt  Dense2007ToDicom.cxx  DenseMultiFramesToDicom.cxx  DenseToDicom.cxx  ExtractOverlays.cxx  FindTags.cxx  FlatHashTablePrint.cxx  MagnetomVisionToBrucker.cxx  MakeDicomDir.cxx  MergeDICOMRaw.cxx  PatchHeader.cxx  PcpdenseToDicom.cxx  PhilipsToBrucker.cxx  PhilipsToBrucker2.cxx  PrintDicomDir.cxx  PrintDocument.cxx  PrintFile.cxx  PrintHeader.cxx  RawToDicom.cxx  RawToDicomStack.cxx  RawToInTagDicom.cxx  ReWrite.cxx  ReWriteExtended.cxx  Rename.cxx  SingleFrames2Multiframe.cxx  SplitIntoDirectories.cxx  SplitIntoXCoherentDirectories.cxx  SplitIntoXCoherentDirectoriesIgnoreSerieUID.cxx  TestChangeHeader.cxx  TestCopyDicom.cxx  TestDcm2Acr.cxx  TestFromScratch.cxx  (+51 more)
Testing/: .cvsignore  CMakeLists.txt  TestAllEntryVerify.cxx  TestAllPrint.cxx  TestAllReadCompareDicom.cxx  TestAllVM.cxx  TestAnonymize.cxx  TestBug.cxx  TestBuildUpDicomDir.cxx  TestChangeHeader.cxx  TestCommand.cxx  TestCopyDicom.cxx  TestCopyRescaleDicom.cxx  TestDataEntry.cxx  TestDicomDir.cxx  TestDicomDirElement.cxx  TestDicomString.cxx  TestDict.cxx  TestDictGroupName.cxx  TestDirList.cxx  TestEmpty.cxx  TestEnumVR.cxx  TestException.cxx  TestFileAccessors.cxx  TestHash.cxx  TestImageSet.cxx  TestInline.cxx  TestLoadAllDocumentsNoPrivNoSeq.cxx  TestLoadAllDocumentsNoShadow.cxx  TestMakeDicomDir.cxx  TestMakeIcon.cxx  TestPrintAllDocument.cxx  TestReadWriteJPEG2000ReadCompare.cxx  TestReadWriteJPEGReadCompare.cxx  TestReadWriteReadCompare.cxx  TestSequence.cxx  TestSerieHelper.cxx  TestTS.cxx  TestUtil.cxx  TestVR.cxx  (+8 more)
Testing/ExceptionAndPython/: .cvsignore  README  foo.cxx.orig
Testing/Install/: CMakeLists.txt  dummy.cxx
gdcmPython/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  README  __init__.py  gdcm.i  gdcmCommandPy.h  gdcmVersion.py  setup.py.in  testSuite.py
gdcmPython/demo/: CMakeLists.txt  PrintDicomDir.py  PrintDicomDir.py.in  PrintDict.py.in  PrintFile.py.in  PrintHeader.py  PrintHeader.py.in  ReorganiseFiles.py  explore.py  load.py  makeDicomDir.py  printGroupedPublicDict.py  test.py  testAll.py  vtkGdcmDemo.py  vtkGdcmReader.py  vtkGdcmReader.py.in  vtkGdcmWriter.py.in
gdcmPython/win32/: .cvsignore  _vtkGdcm.dsp  gdcmpy.dsp  gdcmpycomplet.dsp  gdcmpyembedded.dsp  init.h
src/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  config.h  config.h.in  dcm.i  gdcm.h  gdcm.i  gdcmArgMgr.cxx  gdcmArgMgr.h  gdcmBase.cxx  gdcmBase.h  gdcmBinEntry.cxx  gdcmBinEntry.h  gdcmCallbackCommand.cxx  gdcmCallbackCommand.h  gdcmCommand.cxx  gdcmCommand.h  gdcmCommandManager.cxx  gdcmCommandManager.h  gdcmCommon.h  gdcmContentEntry.cxx  gdcmContentEntry.h  gdcmDataEntry.cxx  gdcmDataEntry.h  gdcmDebug.cxx  gdcmDebug.h  gdcmDefaultDicts.cxx.in  gdcmDicomDir.cxx  gdcmDicomDir.h  gdcmDicomDirElement.cxx  gdcmDicomDirElement.h  gdcmDicomDirImage.cxx  gdcmDicomDirImage.h  gdcmDicomDirMeta.cxx  gdcmDicomDirMeta.h  gdcmDicomDirObject.cxx  gdcmDicomDirObject.h  gdcmDicomDirPatient.cxx  (+129 more)
src/gdcmjasper/: CMakeLists.txt  README.gdcm.txt
src/gdcmjasper/src/: CMakeLists.txt
src/gdcmjpeg/: CMakeLists.txt  jdpred.c  jmemsrc.c  jmorecfg.h.in  jpeglib.h  mangle_jpeg12bits.h  mangle_jpeg16bits.h  mangle_jpeg8bits.h
src/gdcmjpeg/12/: CMakeLists.txt
src/gdcmjpeg/16/: CMakeLists.txt
src/gdcmjpeg/8/: CMakeLists.txt
src/gdcmjpegls/: CMakeLists.txt  README.gdcm.txt  jpegls_config.h.in
src/gdcmjpegls/Decoder/: CMakeLists.txt  bitio.c  decoder.c  gdcmfstream.cxx  gdcmfstream.h  global.c  global.h  initialize.c  jpegmark.c  jpegmark.h  lossless_d.c  lossy_d.c  melcode.c
src/gdcmjpegls/Encoder/: CMakeLists.txt
src/gdcmmpeg2/: README.gdcm.txt
src/gdcmmpeg2/src/: CMakeLists.txt
src/gdcmopenjpeg/: CMakeLists.txt
src/gdcmopenjpeg/codec/: CMakeLists.txt  convert.c  convert.h  image_to_j2k.c  j2k_to_image.c
src/gdcmopenjpeg/libopenjpeg/: CMakeLists.txt  bio.c  bio.h  cio.c  dwt.c  event.c  event.h  image.c  int.c  j2k.c  j2k.h  jp2.c  jp2.h  jpt.c  jpt.h  mct.c  mqc.c  mqc.h  openjpeg.c  openjpeg.h  pi.c  pi.h  raw.c  raw.h  t1.c  t1.h  t2.c  t2.h  tcd.c  tcd.h  tgt.c
src/jpeg/: CMakeLists.txt  Makefile.am
src/jpeg/ljpg/: io.h  (+19 more)
src/orig/: dcmutil.c
src/win32/: .cvsignore  gdcmdll.dsp  libgdcmijpeg12.dsp  libgdcmijpeg8.dsp  libgdcmljpeg.dsp
vtk/: .cvsignore  Bmp2Dcm.cxx  CMakeLists.txt  GdcmToBaseline.cxx  Makefile.am  test4DSplitter.cxx  testvtkGdcmReader.cxx  vtkGdcm4DSplitter.cxx  vtkGdcm4DSplitter.h  vtkGdcmDemo.cxx  vtkGdcmReader.cxx  vtkGdcmReader.h  vtkGdcmWriter.cxx  vtkGdcmWriter.h  vtkImageColorViewer.cxx  vtkImageMapToWindowLevelColors2.cxx  vtkWriteDicom.cxx  vtkWriteDicomExtended.cxx  vtkgdcmSerieViewer.cxx  vtkgdcmSerieViewer2.cxx  vtkgdcmViewer.cxx  vtkgdcmViewer2.cxx
vtk/win32/: vtkGdcmTest.dsp  vtkgdcm.dsp
(+271 files in other folders)
