dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/gdcmDict.cxx)

AC_PREFIX_DEFAULT(/usr/local/DCMlib)

AM_INIT_AUTOMAKE(DCMlib, 0.1.0)
AM_MAINTAINER_MODE
AM_CONFIG_HEADER(src/config.h)

CFLAGS="-Wall -g"
CXXFLAGS="-Wall -g"

dnl Checks for programs.
AM_PROG_LIBTOOL
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for endianness
AC_C_BIGENDIAN

dnl Checks for int and long size
AC_CHECK_SIZEOF(char, 1)
AC_CHECK_SIZEOF(short, 2)
AC_CHECK_SIZEOF(int, 4)
AC_CHECK_SIZEOF(long, 4)
AC_CHECK_SIZEOF(long long, 8)

dnl produce Makefile.in files
AC_OUTPUT([
Makefile 
src/Makefile
Test/Makefile
Dicts/Makefile])
