dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/gdcmDict.cxx)

AM_INIT_AUTOMAKE(gdcm, 0.1.0)
AM_MAINTAINER_MODE
AM_CONFIG_HEADER(src/config.h)

dnl Checks for programs.
AM_PROG_LIBTOOL
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for endianness
AC_C_BIGENDIAN

dnl Checks for int and long size
AC_CHECK_SIZEOF(char, 1)
AC_CHECK_SIZEOF(short, 2)
AC_CHECK_SIZEOF(int, 4)
AC_CHECK_SIZEOF(long, 4)
AC_CHECK_SIZEOF(long long, 8)

AC_CHECK_PROG(DOXYGEN, doxygen, true, false)
AM_CONDITIONAL(HAVE_DOXYGEN, $DOXYGEN)
AC_SUBST(HAVE_DOXYGEN)

dnl Let people disable the doxygen stuff.
AC_ARG_ENABLE(docygen, [  --enable-doxygen         Use doxygen to build documentation (default=auto)], enable_doxygen="$enableval",
enable_doxygen=auto)

if test x$enable_doxygen = xauto ; then
  if test x$DOXYGEN = xtrue ; then
    enable_doxygen=yes
  else
    enable_doxygen=no
  fi
fi

dnl NOTE: We need to use a separate automake conditional for this
dnl       to make this work with the tarballs.
AM_CONDITIONAL(ENABLE_DOXYGEN, test x$enable_doxygen = xyes)

dnl Checks for Python
AC_ARG_ENABLE(python,
        [  --enable-python          Enable Python language support (default=no).],,
        [enable_python="no"])
dnl AC_MSG_RESULT($enable_python)
build_python=no
if test "yes" = "$enable_python"; then
    AM_PATH_PYTHON(2.0)
    if test -n "$PYTHON"; then
        AM_CHECK_PYTHON_HEADERS(,[AC_MSG_ERROR(could not find Python headers)])
        build_python=yes;
    fi
    AC_CHECK_PROGS(SWIG, swig13)
fi
AM_CONDITIONAL(BUILD_PYTHON, test x$build_python = xyes)

dnl produce Makefile.in files
AC_OUTPUT([
Makefile 
gdcm.spec
src/Makefile
gdcmPython/Makefile
Test/Makefile
Dicts/Makefile
Doc/Makefile])
